tests/ui/loop-match/type-const-const-continue-ice.stderr
error: could not determine the target branch for this `#[const_continue]`
  --> $DIR/type-const-const-continue-ice.rs:16:34
   |
LL |                         break 'b Self::N
   |                                  ^^^^^^^ this value is too generic

error: aborting due to 1 previous error

